@@ -94,6 +94,7 @@ assign("call", function(name, ...) NULL, envir = .ArgsEnv)
 assign("class", function(x) NULL, envir = .ArgsEnv)
 assign("class<-", function(x, value) NULL, envir = .ArgsEnv)
 assign(".cache_class", function(class, extends) NULL, envir = .ArgsEnv)
+assign("declare", function(...) NULL, envir = .ArgsEnv)
 assign("emptyenv", function() NULL, envir = .ArgsEnv)
 assign("enc2native", function(x) NULL, envir = .ArgsEnv)
 assign("enc2utf8", function(x) NULL, envir = .ArgsEnv)
